<resources>
    <string name="market_cap">Market cap: %s%s</string>
    <string name="supply">Supply: $%s</string>
    <string name="hour_change">H</string>
    <string name="day_change">D</string>
    <string name="week_change">W</string>
    <string name="change_percent">%s%%</string>
    <string name="price">%s%s</string>
    <string name="usd_symbol">$</string>
    <string name="eur_symbol">€</string>
    <string name="cny_symbol">¥</string>
    <string name="currency_label">Currency</string>
    <string name="limit_label">Limit</string>
    <string name="set">SET</string>
    <string name="settings_label">Settings</string>
    <string name="set_currency_title">Set currency</string>
    <string name="set_limit_title">Set limit</string>
    <string name="failed_loading_error_message">Failed loading crypto currencies</string>
    <string name="details_title">%s (%s)</string>
    <string name="cannot_reload">You can reload again in %d seconds</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_price">Price</string>
    <string name="sort_by_rank">Rank</string>
    <string name="sort_by_title">Sort by</string>
</resources>
