<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_action_search"
        android:orderInCategory="1"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="2"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="3"
        android:title="@string/settings_label"
        app:showAsAction="ifRoom" />

</menu>
