<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ivantrogrlic.crypto.home.HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="parent"
        app:title="@string/settings_label"
        app:titleTextColor="@android:color/white" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/currencyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/crypto_background"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/currencyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_label"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/currencyLabel"
            tools:text="USD" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/currencyDivider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/currencyContainer" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/limitContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/crypto_background"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/currencyDivider">

        <TextView
            android:id="@+id/limitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limit_label"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/limitLabel"
            tools:text="100" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
