<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/crypto_background"
    android:orientation="horizontal"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/rank_container"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1" />

        <TextView
            android:id="@+id/symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            tools:text="BTC" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/volumeContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="@color/cryptoNameColor"
            tools:text="Bitcoin" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="$1000" />

        <TextView
            android:id="@+id/marketCap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            tools:text="Market cap: $1000" />

        <TextView
            android:id="@+id/supply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            tools:text="Supply: $1000" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/changesContainer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:minWidth="88dp"
        android:orientation="vertical"
        android:paddingEnd="4dp"
        android:paddingStart="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hourChangeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="30.65%" />

            <TextView
                android:id="@+id/hourChange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/hour_change"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dayChangeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3%" />

            <TextView
                android:id="@+id/dayChange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day_change"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weekChangeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3%" />

            <TextView
                android:id="@+id/weekChange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/week_change"
                android:textAlignment="viewEnd" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
